--- a/_posts/2022-01-01-job01.markdown
+++ b/_posts/2022-01-01-job01.markdown
@@ -1,8 +1,8 @@
 ---
 layout: null
-title: Phase G
+title: Phase 1
 subtitle:
-image: "img/timeline/King.png"
+image: "img/timeline/One.png"
 ---
 
 Brainstorming ideas and NFT Market Research.
