--- a/_posts/2018-01-01-job01.markdown
+++ b/_posts/2018-01-01-job01.markdown
@@ -2,7 +2,7 @@
 layout: null
 title: Phase 5
 subtitle:
-image: "img/timeline/Tripper.png"
+image: "img/timeline/Five.png"
 ---
 
 Creating and gifting Genius Merchandises free and at offers to the OG Genius.
