--- a/_posts/2020-01-01-job01.markdown
+++ b/_posts/2020-01-01-job01.markdown
@@ -2,7 +2,7 @@
 layout: null
 title: Phase 3
 subtitle:
-image: "img/timeline/Zombie.png"
+image: "img/timeline/Three.png"
 ---
 
 Launching the evolved Genius collection & Official Discord
