--- a/_posts/2018-01-01-job01.markdown
+++ b/_posts/2018-01-01-job01.markdown
@@ -5,8 +5,6 @@ subtitle:
 image: "img/timeline/Five.png"
 ---
 
-Creating and gifting Genius Merchandises free and at offers to the OG Genius.
+Listing on CEX
 
-Organizing events, evolving into an ecommerce space & spreading the Merchandises all over the world.
-
-Entering the Metaverse with all our Genius Club members.
+Community driven Utility development & airdrops events.
