--- a/_posts/2020-01-01-job01.markdown
+++ b/_posts/2020-01-01-job01.markdown
@@ -5,10 +5,6 @@ subtitle:
 image: "img/timeline/Three.png"
 ---
 
-Launching the evolved Genius collection & Official Discord
+Listing on CoinGecko, Jupiter
 
-Announcing Whitelist window, Pre-sales & Public Minting Dates.
-
-Whitelist offers to our OG Genius holders.
-
-Launching Many more surprises & rare Variants of Genius.
+Airdrop to our early contributers 
