--- a/_posts/2019-01-01-job01.markdown
+++ b/_posts/2019-01-01-job01.markdown
@@ -5,12 +5,6 @@ subtitle:
 image: "img/timeline/Four.png"
 ---
 
-Mega Giveaway event on sales of 10k NFTS
+100 Million Market Cap
 
-Growing the Genius Club Community even down the ladder.
-
-Getting the community to interact with each other.
-
-Organizing many Giveaways and Events.
-
-Knocking at the door of Metaverse for potential future of The Genius Club.
+Listing on CoinMarketCap
