--- a/_posts/2018-01-01-job01.markdown
+++ b/_posts/2018-01-01-job01.markdown
@@ -5,6 +5,6 @@ subtitle:
 image: "img/timeline/Five.png"
 ---
 
-Listing on CEX
+Listing on CEX.
 
 Community driven Utility development & airdrops events.
