--- a/_posts/2019-01-01-job01.markdown
+++ b/_posts/2019-01-01-job01.markdown
@@ -5,6 +5,6 @@ subtitle:
 image: "img/timeline/Four.png"
 ---
 
-100 Million Market Cap
+100 Million Market Cap.
 
-Listing on CoinMarketCap
+Listing on CoinMarketCap.
